# xfce-ask

./: LICENSE  Makefile  README.md  meson.build
.github/workflows/: release.yml
data/: meson.build  openai-ask.desktop.in
src/: keyring.c  keyring.h  log.c  log.h  markdown-pango.c  markdown-pango.h  meson.build  openai-ask-plugin.c  openai-client.c  openai-client.h
